<resources>
    <string name="app_name">Doll</string>
    <string name="edit_phone">请输入手机号码</string>
    <string name="edit_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="choose_login">选择登录方式</string>
    <string name="login_rule">登录时表明你同意 服务条款与隐私政策</string>
    <string name="diamond_recharge">钻石充值</string>
    <string name="coin_exchange">金币兑换</string>
    <string name="catch_history">抓取记录</string>
    <string name="notification">通知消息</string>
    <string name="personal">个人</string>
    <string name="mine_order">我的订单</string>
    <string name="setting_sys_personal">个人</string>
    <string name="setting_sys_personal_setting">个人设置</string>
    <string name="setting_sys_set">设置</string>
    <string name="setting_sys_setting">系统设置</string>
    <string name="setting_sys_about">关于</string>
    <string name="setting_sys_nickname">用户昵称</string>
    <string name="setting_sys_english_company">Copyright©2017 Shanghai Huyukoudai. All Rights Reserved</string>
    <string name="setting_sys_chinese_company">互娱口袋（上海）网络科技有限公司 版权所有</string>
    <string name="setting_sys_nickname02">昵称</string>
    <string name="setting_sys_help">帮助</string>
    <string name="setting_sys_avatar">头像</string>
    <string name="setting_sys_current_version">当前版本</string>
    <string name="setting_sys_clear">清理缓存</string>
    <string name="setting_sys_bg_music">背景音乐</string>
    <string name="setting_sys_sex">性别</string>
    <string name="setting_sys_feed_suggestion">意见反馈</string>
    <string name="setting_sys_aboutus">关于我们</string>
    <string name="setting_sys_phone">联系电话</string>
    <string name="setting_sys_bg_sound">背景音效</string>
    <string name="setting_sys_notification">通知消息</string>
    <string name="setting_sys_recharge">充值记录</string>
    <string name="setting_sys_place">所在地</string>
    <string name="setting_sys_area">地区</string>
    <string name="setting_sys_street">街道</string>
    <string name="setting_sys_address_detail">详细地址</string>
    <string name="setting_sys_invitation_code">邀请码</string>
    <string name="setting_sys_gift_code">福利码</string>
    <string name="setting_sys_address">收货地址</string>
    <string name="setting_sys_modify_address">修改地址</string>
    <string name="setting_add">添加</string>
    <string name="setting_sys_doll_form">我的订单</string>
    <string name="setting_sys_invitation_code_rule">邀请码规则</string>
    <string name="setting_sys_invitation_my_code">我的邀请码</string>
    <string name="setting_sys_invitation_code_content">邀请好友加入口袋抓娃娃APP 分享你的邀请码\n好友兑换邀请码后 好友可获得80钻石</string>
    <string name="setting_sys_share_content">玩嗨了，教你如何不花钱横扫抓娃娃机！</string>
    <string name="setting_sys_logout">登出账号</string>
    <string name="setting_sys_save_address">保存地址</string>
    <string name="setting_sys_add_address">新增地址</string>
    <string name="setting_sys_share_code">分享</string>
    <string name="setting_sys_exchange">兑换</string>
    <string name="setting_sys_receiver">收货人</string>
    <string name="setting_sys_confirm">提交</string>
    <string name="loading_video">视频加载中...</string>
    <string name="home_person">房间人数</string>
    <string name="refresh_video">刷新\n视频</string>
    <string name="chat">发言</string>
    <string name="fast_select">同款</string>
    <string name="doll_detail">详情</string>
    <string name="recharge">充值</string>
    <string name="fb_reason1">画面黑屏或定格</string>
    <string name="fb_reason2">操作按键失灵</string>
    <string name="fb_reason3">爪子卡住动不了</string>
    <string name="fb_reason4">其他情况</string>
    <string name="fb_cancel">取消</string>
    <string name="fb_other">输入你碰到的详细情况</string>
    <string name="exchange_diamond">兑换钻石</string>
    <string name="send_gift">配送娃娃</string>
    <string name="select_all">全选</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_170_170_170">马云:一年交税170多亿马云:一年交税170多亿马云:一年交税170多亿一年交税170多亿马云:一年交税170多亿马云:</string>
</resources>
