<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.v7.widget.CardView
            android:layout_width="@dimen/px_1182"
            android:layout_height="@dimen/px_684"
            android:background="@color/white_255"
            app:cardCornerRadius="@dimen/px_45"
            app:cardElevation="0px">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reason_1"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fb_reason1"
                    android:textColor="#007aff"
                    android:textSize="@dimen/text_size_54" />

                <TextView
                    android:id="@+id/reason_2"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fb_reason2"
                    android:textColor="#007aff"
                    android:textSize="@dimen/text_size_54" />

                <TextView
                    android:id="@+id/reason_3"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fb_reason3"
                    android:textColor="#007aff"
                    android:textSize="@dimen/text_size_54" />

                <TextView
                    android:id="@+id/reason_4"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fb_reason4"
                    android:textColor="#007aff"
                    android:textSize="@dimen/text_size_54" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/feedback_cancel"
            android:layout_width="@dimen/px_1182"
            android:layout_height="@dimen/px_180"
            android:layout_margin="@dimen/px_30"
            android:background="@drawable/drawable_cancel"
            android:gravity="center"
            android:text="@string/fb_cancel"
            android:textColor="#007aff"
            android:textSize="@dimen/text_size_54"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>