<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/theme"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--logo-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="132px">

        <ImageView
            android:layout_width="372px"
            android:layout_height="96px"
            android:layout_centerInParent="true"
            android:src="@mipmap/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_login_background"
        android:gravity="center_horizontal">

        <!--用户名 密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone"
                android:layout_width="@dimen/px_900"
                android:layout_height="@dimen/px_162"
                android:layout_marginTop="@dimen/px_198"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/edit_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="@dimen/space_60"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/text_size_42" />

            <View
                android:layout_width="900px"
                android:layout_height="@dimen/line_6"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="@dimen/px_900"
                android:layout_height="@dimen/px_162"
                android:layout_marginTop="@dimen/px_78">

                <EditText
                    android:id="@+id/auth_code"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/edit_code"
                    android:inputType="number"
                    android:maxLength="4"
                    android:paddingLeft="@dimen/space_60"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/text_size_42" />

                <TextView
                    android:id="@+id/auth_code_send"
                    android:layout_width="240px"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="获取"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/text_size_42" />
            </LinearLayout>

            <View
                android:layout_width="900px"
                android:layout_height="@dimen/line_6"
                android:background="@color/line" />

            <TextView
                android:id="@+id/login"
                android:layout_width="@dimen/px_420"
                android:layout_height="@dimen/px_150"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/px_240"
                android:background="@drawable/drawable_login"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white_255"
                android:textSize="@dimen/text_size_42" />
        </LinearLayout>

        <!--登录方式-->
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="@dimen/px_120"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/choose_login"
                android:textColor="@color/homepage_color"
                android:textSize="@dimen/text_size_36" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginBottom="@dimen/px_60"
                android:id="@+id/login_wechat"
                android:layout_width="@dimen/px_150"
                android:layout_height="@dimen/px_150"
                android:src="@mipmap/wechat" />

            <LinearLayout
                android:id="@+id/login_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/px_40"
                android:orientation="horizontal">

                <RelativeLayout
                    android:background="@drawable/drawable_login_rule"
                    android:id="@+id/rule_checked_layout"
                    android:layout_width="@dimen/px_45"
                    android:layout_height="@dimen/px_45">

                    <ImageView
                        android:id="@+id/rule_checked"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/rule"
                    android:layout_marginBottom="@dimen/px_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/px_20"
                    android:text="@string/login_rule"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_36" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>