<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:layout_width="@dimen/px_1002"
                android:layout_height="@dimen/px_1260"
                android:layout_margin="@dimen/px_50"
                app:cardBackgroundColor="@color/white_255"
                app:cardCornerRadius="@dimen/px_45"
                app:cardElevation="@dimen/px_0">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!--头像-->
                        <RelativeLayout
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/px_120"
                            android:layout_width="@dimen/px_300"
                            android:layout_height="@dimen/px_300">
                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/user_head"
                                android:src="@color/white_255"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                            <ImageView
                                android:id="@+id/use_sex"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentRight="true"
                                android:layout_width="@dimen/px_90"
                                android:layout_height="@dimen/px_90" />
                        </RelativeLayout>

                        <!--昵称-->
                        <TextView
                            android:id="@+id/user_name"
                            android:textSize="18sp"
                            android:layout_marginTop="@dimen/px_60"
                            android:textColor="@color/homepage_color"
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <!--钻石金币-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/px_60"
                            android:orientation="horizontal"
                            android:weightSum="2">
                            <!--钻石-->
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="@dimen/px_400"
                                    android:layout_height="@dimen/px_150"
                                    android:layout_marginRight="@dimen/px_20"
                                    android:background="@drawable/drawable_user_diamond"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="@dimen/px_72"
                                        android:layout_height="@dimen/px_72"
                                        android:src="@mipmap/diamond_icon" />

                                    <TextView
                                        android:id="@+id/user_diamond"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="@dimen/px_10"
                                        android:text="122"
                                        android:textColor="@color/homepage_color"
                                        android:textSize="16sp" />
                                </LinearLayout>

                                <TextView
                                    android:layout_marginTop="@dimen/px_30"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@string/diamond_recharge"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                            <!--金币-->
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="@dimen/px_400"
                                    android:layout_height="@dimen/px_150"
                                    android:layout_marginLeft="@dimen/px_20"
                                    android:background="@drawable/drawable_user_diamond"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="@dimen/px_72"
                                        android:layout_height="@dimen/px_72"
                                        android:src="@mipmap/coin" />

                                    <TextView
                                        android:id="@+id/user_coin"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="@dimen/px_10"
                                        android:text="122"
                                        android:textColor="@color/homepage_color"
                                        android:textSize="16sp" />
                                </LinearLayout>

                                <TextView
                                    android:layout_marginTop="@dimen/px_30"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@string/coin_exchange"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                        </LinearLayout>

                        <!--记录,通知-->
                        <LinearLayout
                            android:weightSum="2"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <!--抓取记录-->
                            <LinearLayout
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:layout_marginTop="@dimen/px_45"
                                    android:id="@+id/catch_history"
                                    android:src="@mipmap/crawlrecord_btn"
                                    android:layout_width="@dimen/px_150"
                                    android:layout_height="@dimen/px_150" />

                                <TextView
                                    android:layout_marginTop="@dimen/px_20"
                                    android:textColor="@color/homepage_color"
                                    android:text="@string/catch_history"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>

                            <Space
                                android:layout_width="@dimen/px_250"
                                android:layout_height="match_parent" />

                            <!--通知-->
                            <RelativeLayout
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                    <ImageView
                                        android:layout_marginTop="@dimen/px_45"
                                        android:id="@+id/notification_msg"
                                        android:src="@mipmap/notice_btn"
                                        android:layout_width="@dimen/px_150"
                                        android:layout_height="@dimen/px_150" />

                                    <TextView
                                        android:layout_marginTop="@dimen/px_20"
                                        android:textColor="@color/homepage_color"
                                        android:text="@string/notification"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content" />
                                </LinearLayout>

                                <ImageView
                                    android:visibility="gone"
                                    android:layout_centerHorizontal="true"
                                    android:id="@+id/new_notification"
                                    android:src="@mipmap/new_notification_pop_icon"
                                    android:layout_width="@dimen/px_90"
                                    android:layout_height="@dimen/px_90" />
                            </RelativeLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/user_set"
                        android:layout_marginTop="@dimen/px_30"
                        android:layout_marginRight="@dimen/px_30"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/set_btn"
                        android:layout_width="@dimen/px_105"
                        android:layout_height="@dimen/px_105" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <ImageView
                android:id="@+id/user_cancel"
                android:layout_width="@dimen/px_150"
                android:layout_height="@dimen/px_160"
                android:background="@mipmap/window_cancel" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>